# rust-clockkit

./: Cargo.toml  README.md  build.rs
examples/: ckphaselock.rs  clockkit.conf
include/ClockKit/: PhaseLockedClock.cpp  PhaseLockedClock.h  bridge.cpp  bridge.h  update_vendor.sh
src/: lib.rs  main.rs
tests/: ckserver-amd64-linux  function.rs
