[package]
name = "clockkit"
version = "0.2.0"
authors = ["Fabian Dreer <infrasonics@gmx.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Infrasonics/rust-clockkit"
description = "Low level bindings for the `clockkit` distributed timestamp service"
readme = "README.md"
keywords = ["timestamp", "network"]
categories = ["date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "~1.0"

[dependencies]
cxx = "~1.0"
thiserror = "~1.0"
chrono = "~0.4"
tracing = { version = "~0.1", optional = true }

[dev-dependencies]
argh = "0.1.7"

[features]
default = []
build_server = []

[profile.release]
lto = "fat"
opt-level = "s"
